@@ -1,6 +1,8 @@
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
 
+import math
+
 from box import Box
 
 from qtpy import QtWidgets, QtCore, QtGui
@@ -25,11 +27,11 @@ class Command(QtWidgets.QTabWidget):
     def __init__(self, parent, command, number, name="", enabled=True):
         super(Command, self).__init__(parent)
         self.command = command
-        self.widget = QtWidgets.QLineEdit()
+        self.widget = QtWidgets.QTextEdit()
         self.widget.setReadOnly(True)
         self.widget.setText(command)
         self.widget.setDisabled(not enabled)
-        self.setFixedHeight(60)
+        self.setMinimumHeight(45 + (math.ceil(len(command) / 180) * 25))
 
         grid = QtWidgets.QGridLayout()
         grid.addWidget(QtWidgets.QLabel(f"Command {number}" if not name else name), 0, 0, 1, 2)
