@@ -4,6 +4,7 @@ Changelog
 Version 2.4.0
 ~~~~~~~~~~~~~
 
+* Adding larger command line view to see entire command at once
 * Changing to using qtpy which supports dynamic linking of either pyside2 or pyqt5, instead of only Pyside2
 * Fixing #4 Error Box when someone other than video file is dropped onto fastflix
 * Fixing #44 Remove metadata from original file
